Update FriendRequest to request
Request would handle both request for friends and group invites
Update existing endpoints to work with Requests
Update Documentation to show Requests instead of FriendRequests
Start on group chat backend implementation
